Changelog
=========

0.3.0 (Unreleased)
------------------

* you can now use more general `jQuery selector`__ instead of simple URL parts [keul]
* do not show types that are in list of unwanted types in navigation [keul]
* ``collective.navigationtoggle.txt``was empty [keul]
* JSLint cleanup [keul]

__ http://docs.jquery.com/Selectors

0.2.1 (2010-07-09)
------------------

* fixed a bug when fast double-click on opened elements (close `#1`__) [keul]
* much better Sunburst support (and other themes, in general), now checking also for "*contenttype-xx*"
  and "*state-xx*" CSS classes on links [keul]

__ http://plone.org/products/collective.navigationtoggle/issues/1

0.2.0 (2010-04-11)
------------------

* query_subelement view documentation was incomplete [keul]
* when querying empty folder, do not prevent (in facts: simulate) browser default action [keul]
* prevent browser cache (mainly know Internet Explorer problem) [keul]
* do not always display the content's image icon (sometimes users don't see them in navigation) [keul]
* now every element node cache its subtree, so AJAX call is performed only once (can be disabled) [keul]
* added dependency on simplejson for formatting server responses [keul]
* added minimal Plone 4.0 compatibility (UI result is not perfect) [keul]
* added a simple slide up/down effect (disabled by default) [keul]

0.1.0 (2010-04-06)
------------------

* initial release
