@@ -15,6 +15,13 @@
       description="Installs the collective.navigationtoggle package"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
-  <!-- -*- extra stuff goes here -*- -->
+
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="collective.navigationtoggle"
+      directory="profiles/uninstall"
+      description="Remove the collective.navigationtoggle package"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      />
   
 </configure>
