@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+
+ <javascript id="++resource++collective.navigationtoggle.js"
+             remove="True" />
+
+</object>
